--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@sveltejs/adapter-node": "^1.0.0-next.106",
 		"@sveltejs/kit": "next",
 		"@types/uuid": "^9.0.0",
+		"svelte-material-icons": "next",
 		"autoprefixer": "^10.4.13",
 		"postcss": "^8.4.21",
 		"prisma": "^4.8.1",
